--- a/ecommerce-angular-app/package.json
+++ b/ecommerce-angular-app/package.json
@@ -19,7 +19,7 @@
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
-    "@angular/fire": "^7.2.0",
+    "@angular/fire": "^7.0.4",
     "@angular/forms": "~13.0.0",
     "@angular/material": "^13.1.0",
     "@angular/platform-browser": "~13.0.0",
@@ -30,6 +30,7 @@
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "firebase": "^9.6.1",
+    "firebase-tools": "^9.6.1",
     "ngx-image-cropper": "^5.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
